--- a/css/app.css
+++ b/css/app.css
@@ -37,7 +37,7 @@ html, body {  padding: 0;  margin: 0; background-color: gray;}
   padding: 0; 
   margin: 0;
   height: auto;
-  background: url("/img/fog.jpg") no-repeat center center fixed;
+  background: url("../img/fog.jpg") no-repeat center center fixed;
           -webkit-background-size: cover;
           -moz-background-size: cover;
           -o-background-size: cover;
